--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" >
-<!-- style="overflow-y:hidden" -->
+<html lang="en" style="overflow-y:auto" >
+
 
   <head>
-    
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
